--- a/fava/static/css/style.css
+++ b/fava/static/css/style.css
@@ -38,10 +38,11 @@ body {
   --font-family-monospaced: 'Fira Mono', monospace;
   --font-family-editor: 'Source Code Pro', monospace;
 
-  --z-index-header: 1;
-  --z-index-floating-ui: 2;
+  --z-index-aside: 1;
+  --z-index-header: 2;
+  --z-index-floating-ui: 3;
   --z-index-keyboard-overlays: 10;
-  --z-index-overlay: 3;
+  --z-index-overlay: 4;
 
   --color-background: #fff;
   --color-background-darker: #d9d9d9;
